# ChangeLog for sys-apps/pam-login
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/Attic/ChangeLog,v 1.45 2005/05/20 13:07:18 flameeyes Exp $

  20 May 2005; Diego Pettenò <flameeyes@gentoo.org> pam-login-3.17.ebuild:
  Inherit pam for newpamd file.

*pam-login-3.17 (25 Feb 2005)

  25 Feb 2005; Martin Schlemmer <azarah@gentoo.org> +files/login.pamd,
  +files/pam-login-3.17-query_user_context.patch, +pam-login-3.17.ebuild:
  Update version. Add pam.d login file. Add pam_console comments to login
  pam.d file. DEPEND on shadow-4.0.7-r1, as that do no longer install the
  login pam.d file.

  29 Nov 2004; Mike Frysinger <vapier@gentoo.org> pam-login-3.14.ebuild:
  Doesnt actually require shadow #67815.

  01 Oct 2004; Michael Sterrett <mr_bones_@gentoo.org> pam-login-3.14.ebuild:
  gnuconfig_update in src_unpack; tidy

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> pam-login-3.10.ebuild,
  pam-login-3.11-r1.ebuild, pam-login-3.11.ebuild, pam-login-3.12-r1.ebuild,
  pam-login-3.12.ebuild, pam-login-3.14.ebuild, pam-login-3.6-r1.ebuild,
  pam-login-3.6-r2.ebuild, pam-login-3.7.ebuild:
  sync IUSE (+nls), glibc -> libc, trim trailing whitespace

  27 Jun 2004; Chris PeBenito <pebenito@gentoo.org> pam-login-3.14.ebuild:
  Change the query_user_context patch to not apply with USE=livecd, since it can
  cause login timeouts if the user isn't ready.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> pam-login-3.11-r1.ebuild,
  pam-login-3.12.ebuild, pam-login-3.14.ebuild:
  Add inherit eutils

  30 Mar 2004; Tom Gall <tgall@gentoo.org> pam-login-3.14.ebuild:
  stable on ppc64 and minor fix 

  09 Mar 2004; <agriffis@gentoo.org> pam-login-3.14.ebuild:
  stable on alpha and ia64

  07 Mar 2004; Joshua Kinard <kumba@gentoo.org> pam-login-3.14.ebuild:
  Marked stable on mips.

  09 Feb 2004; <gustavoz@gentoo.org> pam-login-3.14.ebuild:
  stable on sparc
