@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/Attic/pam-login-3.17.ebuild,v 1.5 2005/07/07 12:59:46 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/Attic/pam-login-3.17.ebuild,v 1.6 2005/07/07 13:17:07 flameeyes Exp $
 
 inherit gnuconfig eutils pam
 
@@ -16,7 +16,7 @@ SRC_URI="ftp://ftp.suse.com/pub/people/kukuk/pam/${MY_PN}/${MY_PN}-${PV}.tar.bz2
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 arm ~hppa ~ia64 m68k ~mips ~ppc ~ppc64 s390 sh ~sparc x86"
+KEYWORDS="~alpha amd64 arm ~hppa ~ia64 m68k ~mips ~ppc ~ppc64 s390 sh ~sparc x86"
 IUSE="livecd nls selinux"
 
 DEPEND="virtual/libc
