@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/shadow
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.105 2005/06/30 03:30:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.106 2005/07/07 13:16:36 flameeyes Exp $
+
+  07 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> shadow-4.0.7-r2.ebuild:
+  Stable on amd64
 
 *shadow-4.0.10 (30 Jun 2005)
 
