@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pam-login
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/Attic/ChangeLog,v 1.45 2005/05/20 13:07:18 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/Attic/ChangeLog,v 1.46 2005/07/07 13:17:07 flameeyes Exp $
+
+  07 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> pam-login-3.17.ebuild:
+  Stable on amd64
 
   20 May 2005; Diego Pettenò <flameeyes@gentoo.org> pam-login-3.17.ebuild:
   Inherit pam for newpamd file.
